--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -38,6 +38,7 @@ p {
   padding: 20px;
   text-align: center;
   min-width: 300px;
+}
 .btn {
   display: flex;
   text-align: center;
@@ -47,10 +48,3 @@ p {
   margin: 200px;
   gap: 3rem;
 }
-
-button {
-  color: #fff;
-  background-color: green;
-  padding: 30px;
-  border-radius: 15px;
-
