--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -34,7 +34,7 @@ label {
 }
 
 p {
-  border: 1px solid rebeccapurple;
+  border: 1px solid #333333;
   padding: 20px;
   text-align: center;
   min-width: 300px;
