--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -6,7 +6,7 @@ body {
   text-align: center;
   align-items: center;
   height: 80vh;
-  background-color: #000;
+  background-color: #ffc7c7;
 }
 
 * {
@@ -14,13 +14,14 @@ body {
 }
 
 button {
-  background-color: orange;
+  background-color: #222;
   color: white;
   border: none;
   cursor: pointer;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   min-width: 300px;
+  border-radius: 80px;
 }
 
 button:disabled {
