--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -6,7 +6,7 @@ body {
   text-align: center;
   align-items: center;
   height: 80vh;
-  background-color: #ffc7c7;
+  background-color: #592e2e;
 }
 
 * {
